--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </path>
       </svg>
 
-      <span class="text">Open</span>
+      <span class="text">Pencet sinii sayangg</span>
     </a>
   </div>
 
